start på hjemmesiden om champions league, hentet inspirasjon fra "litt css snacks"

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">¯
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT prosjekt</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>IT prosjekt</h1>
+
+    <main>
+        <img src="bilder/Hoofdfoto-Champions-League.jpg" alt="">
+        <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+            <img class="image" src="bilder/real24.jpg" draggable="false" />
+            <img class="image" src="bilder/manCity23.jpg" draggable="false" />
+            <img class="image" src="bilder/real22.jpg" draggable="false" />
+            <img class="image" src="bilder/cfc21.jpg" draggable="false" />
+            <img class="image" src="bilder/bayern20.jpeg" draggable="false" />
+            <img class="image" src="bilder/lfc19.jpg" draggable="false" />
+            <img class="image" src="bilder/real18.jpg" draggable="false" />
+            <img class="image" src="bilder/real17.jpg" draggable="false" />
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
+
 </html>
