--- a/index.html
+++ b/index.html
@@ -14,25 +14,37 @@
 <body>
 
     <main>
+
+        <img src="bilder/Hoofdfoto-Champions-League.jpg" draggable="false">
+
         <div class="topptekst">
             <i class="fa-solid fa-trophy"></i>
             <h1>De 7 nyligste mesterne</h1>
         </div>
-        <i class="fa-solid fa-bars" id="burgerMeny"></i>
+        <div class="indexBurger">
+            <i class="fa-solid fa-bars burgerMeny"></i>
+        </div>
         <nav id="clMeny" class="skjult">
-            <a href="#">sesonger</a>
-            <a href="#">trofeer</a>
-            <a href="#">Om UCL</a>
+            <a href="omUCL.html">Om UCL</a>
+            <a href="quiz.html">Quiz!</a>
+            <a href="#">Test deg selv</a>
         </nav>
-        <img src="bilder/Hoofdfoto-Champions-League.jpg" draggable="false">
+
         <div id="image-track" data-mouse-down-at="0" data-prev-percentage="-100">
-            <img class="image" src="bilder/real18.jpg" draggable="false" />
-            <img class="image" src="bilder/lfc19.jpg" draggable="false" />
-            <img class="image" src="bilder/bayern20.jpeg" draggable="false" />
-            <img class="image" src="bilder/cfc21.jpg" draggable="false" />
-            <img class="image" src="bilder/real22.jpg" draggable="false" />
-            <img class="image" src="bilder/manCity23.jpg" draggable="false" />
-            <img class="image" src="bilder/real24.jpg" draggable="false" />
+            <img class="image" src="bilder/real18.jpg" draggable="false"
+                onclick="window.location.href='Real2018.html';" />
+            <img class="image" src="bilder/lfc19.jpg" draggable="false"
+                onclick="window.location.href='LFC2019.html';" />
+            <img class="image" src="bilder/bayern20.jpeg" draggable="false"
+                onclick="window.location.href='Bayern2020.html';" />
+            <img class="image" src="bilder/cfc21.jpg" draggable="false"
+                onclick="window.location.href='CFC2021.html';" />
+            <img class="image" src="bilder/real22.jpg" draggable="false"
+                onclick="window.location.href='Real2022.html';" />
+            <img class="image" src="bilder/manCity23.jpg" draggable="false"
+                onclick="window.location.href='ManCity2023.html';" />
+            <img class="image" src="bilder/real24.jpg" draggable="false"
+                onclick="window.location.href='Real2024.html';" />
         </div>
     </main>
 
