--- a/CFC2021.html
+++ b/CFC2021.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/side.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,15 +20,33 @@
         <div class="topp">
             <a href="index.html">
                 <i class="fa-solid fa-house"></i></a>
-            <h3>Champions League 2024</h3>
+            <h3>Champions League 2021</h3>
             <i class="fa-solid fa-bars burgerMeny"></i>
         </div>
         <nav id="clMeny" class="skjult">
-            <a href="omUCL.html">Om UCL</a>
-            <a href="quiz.html">Quiz!</a>
-            <a href="#">test deg selv</a>
+            <a href="omUCL.html" class="menyLink">Om UCL</a>
+            <a href="quiz.html" class="menyLink">Quiz!</a>
+
+            <div class="dropdown">
+                <a href="#" id="sesongToggler">
+                    Sesonger <span id="pil">▼</span>
+                </a>
+                <div class="sesongListe">
+                    <a href="Real2024.html">2024</a>
+                    <a href="ManCity2023.html">2023</a>
+                    <a href="Real2022.html">2022</a>
+                    <a href="CFC2021.html">2021</a>
+                    <a href="Bayern2020.html">2020</a>
+                    <a href="docs/LFC2019.html">2019</a>
+                    <a href="Real2018.html">2018</a>
+                </div>
+            </div>
         </nav>
         <div class="sideInnhold">
+            <div class="pil">
+                <i class="fa-solid fa-arrow-left" onclick="window.location.href='Bayern2020.html';"> </i>
+                <h5>2020</h5>
+            </div>
             <section class="sesonginfo">
                 <h2>Finale</h2>
                 <p>Chelsea slo Manchester City 1–0.</p>
@@ -49,27 +68,22 @@
                 <p>Chelsea holdt nullen i 9 av 13 kamper – bunnsolid forsvar.</p>
             </section>
 
-            <div class="fakta-boks" id="faktaBoks">
-                <div class="fakta-minimal" id="aapneFakta">
-                    <div class="sirkel">
-                        <i class="fa-solid fa-info"></i>
-                    </div>
-                    <p class="fakta">turneringens beste spiller</p>
-                </div>
 
-                <div class="fakta-full">
-                    <button id="lukkFakta">
-                        <i class="fa-solid fa-xmark"></i>
-                    </button>
-                    <h3>N'Golo Kanté!</h3>
-                    <img class="turneringBildeBoks" src="bilder/kante21.jpg" alt="">
-                </div>
+            <div class="sesonginfo spillerInfo">
+                <h4>turneringens beste spiller</h4>
+                <img class="turneringBildeBoks" src="bilder/kante21.jpg" alt="">
+                <h4>Kante!</h4>
+            </div>
+            <div class="pil">
+                <i class="fa-solid fa-arrow-right" onclick="window.location.href='Real2022.html';"></i>
+                <h5>2022</h5>
             </div>
         </div>
 
     </div>
 
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
+    <script src="script/side.js"></script>
 </body>
 
 </html>
