--- a/Real2024.html
+++ b/Real2024.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real24</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/side.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,11 +24,29 @@
             <i class="fa-solid fa-bars burgerMeny"></i>
         </div>
         <nav id="clMeny" class="skjult">
-            <a href="omUCL.html">Om UCL</a>
-            <a href="quiz.html">Quiz!</a>
-            <a href="#">test deg selv</a>
+            <a href="omUCL.html" class="menyLink">Om UCL</a>
+            <a href="quiz.html" class="menyLink">Quiz!</a>
+
+            <div class="dropdown">
+                <a href="#" id="sesongToggler">
+                    Sesonger <span id="pil">▼</span>
+                </a>
+                <div class="sesongListe">
+                    <a href="Real2024.html">2024</a>
+                    <a href="ManCity2023.html">2023</a>
+                    <a href="Real2022.html">2022</a>
+                    <a href="CFC2021.html">2021</a>
+                    <a href="Bayern2020.html">2020</a>
+                    <a href="docs/LFC2019.html">2019</a>
+                    <a href="Real2018.html">2018</a>
+                </div>
+            </div>
         </nav>
         <div class="sideInnhold">
+            <div class="pil">
+                <i class="fa-solid fa-arrow-left" onclick="window.location.href='ManCity2023.html';"> </i>
+                <h5>2023</h5>
+            </div>
             <section class="sesonginfo">
                 <h2>Finale</h2>
                 <p>Real Madrid slo Borussia Dortmund 2–0.</p>
@@ -51,26 +70,17 @@
                 <p>Dette var Real Madrids 15. Champions League-tittel – rekord!</p>
             </section>
 
-            <div class="fakta-boks" id="faktaBoks">
-                <div class="fakta-minimal" id="aapneFakta">
-                    <div class="sirkel">
-                        <i class="fa-solid fa-info"></i>
-                    </div>
-                    <p class="fakta">turneringens beste spiller</p>
-                </div>
-
-                <div class="fakta-full">
-                    <button id="lukkFakta">
-                        <i class="fa-solid fa-xmark"></i>
-                    </button>
-                    <h3>Vinicuis Junior!</h3>
-                    <img class="turneringBildeBoks" src="bilder/viniJR.jpg" alt="">
-                </div>
+            <div class="sesonginfo spillerInfo">
+                <h4>turneringens beste spiller</h4>
+                <img class="turneringBildeBoks" src="bilder/viniJR.jpg" alt="">
+                <h4>Vinicius JR!</h4>
             </div>
         </div>
+    </div>
 
 
-        <script src="script.js"></script>
+    <script src="script/script.js"></script>
+    <script src="script/side.js"></script>
 </body>
 
 </html>
