--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT prosjekt</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,17 +17,31 @@
 
         <img src="bilder/Hoofdfoto-Champions-League.jpg" draggable="false">
 
-        <div class="topptekst">
+       <!-- <div class="topptekst">
             <i class="fa-solid fa-trophy"></i>
             <h1>De 7 nyligste mesterne</h1>
-        </div>
+        </div> --> 
         <div class="indexBurger">
             <i class="fa-solid fa-bars burgerMeny"></i>
         </div>
         <nav id="clMeny" class="skjult">
-            <a href="omUCL.html">Om UCL</a>
-            <a href="quiz.html">Quiz!</a>
-            <a href="#">Test deg selv</a>
+            <a href="omUCL.html" class="menyLink">Om UCL</a>
+            <a href="quiz.html" class="menyLink">Quiz!</a>
+
+            <div class="dropdown">
+                <a href="#" id="sesongToggler">
+                    Sesonger <span id="pil">▼</span>
+                </a>
+                <div class="sesongListe">
+                    <a href="Real2024.html">2024</a>
+                    <a href="ManCity2023.html">2023</a>
+                    <a href="Real2022.html">2022</a>
+                    <a href="CFC2021.html">2021</a>
+                    <a href="Bayern2020.html">2020</a>
+                    <a href="docs/LFC2019.html">2019</a>
+                    <a href="Real2018.html">2018</a>
+                </div>
+            </div>
         </nav>
 
         <div id="image-track" data-mouse-down-at="0" data-prev-percentage="-100">
@@ -48,7 +62,8 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
+    <script src="script/side.js"></script>
 </body>
 
 </html>
