--- a/omUCL.html
+++ b/omUCL.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alle vinnere</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/side.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,13 +21,27 @@
                 <i class="fa-solid fa-house"></i></a>
             <h3>UEFA Champions League</h3>
             <i class="fa-solid fa-bars burgerMeny"></i>
-
-            <nav id="clMeny" class="skjult">
-                <a href="omUCL.html">Om UCL</a>
-                <a href="quiz.html">Quiz!</a>
-                <a href="#">test deg selv</a>
-            </nav>
         </div>
+        <nav id="clMeny" class="skjult">
+            <a href="omUCL.html" class="menyLink">Om UCL</a>
+            <a href="quiz.html" class="menyLink">Quiz!</a>
+
+            <div class="dropdown">
+                <a href="#" id="sesongToggler">
+                    Sesonger <span id="pil">▼</span>
+                </a>
+                <div class="sesongListe">
+                    <a href="Real2024.html">2024</a>
+                    <a href="ManCity2023.html">2023</a>
+                    <a href="Real2022.html">2022</a>
+                    <a href="CFC2021.html">2021</a>
+                    <a href="Bayern2020.html">2020</a>
+                    <a href="docs/LFC2019.html">2019</a>
+                    <a href="Real2018.html">2018</a>
+                </div>
+            </div>
+        </nav>
+
         <div class="sideInnhold">
             <img class="vinnere" src="bilder/alleVinnere.jpg" alt="">
 
@@ -60,7 +75,8 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
+    <script src="script/side.js"></script>
 </body>
 
 </html>
