--- a/quiz.html
+++ b/quiz.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="no">
+
 <head>
     <meta charset="UTF-8">
     <title>Champions League Quiz</title>
-    <link rel="stylesheet" href="quiz.css">
-     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/quiz.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/side.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="topp">
-            <a href="index.html">
-                <i class="fa-solid fa-house"></i></a>
-            <i class="fa-solid fa-bars burgerMeny"></i>
+        <a href="index.html">
+            <i class="fa-solid fa-house"></i></a>
+        <i class="fa-solid fa-bars burgerMeny"></i>
+    </div>
+    <nav id="clMeny" class="skjult">
+        <a href="omUCL.html" class="menyLink">Om UCL</a>
+        <a href="quiz.html" class="menyLink">Quiz!</a>
+
+        <div class="dropdown">
+            <a href="#" id="sesongToggler">
+                Sesonger <span id="pil">▼</span>
+            </a>
+            <div class="sesongListe">
+                <a href="Real2024.html">2024</a>
+                <a href="ManCity2023.html">2023</a>
+                <a href="Real2022.html">2022</a>
+                <a href="CFC2021.html">2021</a>
+                <a href="Bayern2020.html">2020</a>
+                <a href="docs/LFC2019.html">2019</a>
+                <a href="Real2018.html">2018</a>
+            </div>
         </div>
-        <nav id="clMeny" class="skjult">
-            <a href="omUCL.html">Om UCL</a>
-            <a href="quiz.html">Quiz!</a>
-            <a href="#">test deg selv</a>
-        </nav>
+    </nav>
     <div class="quiz-container">
-        <h4>Champions League Quiz</h4>
+        <h6>Champions League Quiz</h6>
         <div id="quiz">
             <div id="spørsmålstekst"></div>
             <div id="svaralternativer"></div>
@@ -29,7 +46,9 @@
         </div>
         <div id="resultat"></div>
     </div>
-    <script src="quiz.js"></script>
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
+    <script src="script/side.js"></script>
+    <script src="script/quiz.js"></script>
 </body>
+
 </html>
