--- a/index.html
+++ b/index.html
@@ -14,51 +14,49 @@
 <body>
 
     <main>
-
-        <img src="bilder/Hoofdfoto-Champions-League.jpg" draggable="false">
-
-       <!-- <div class="topptekst">
-            <i class="fa-solid fa-trophy"></i>
-            <h1>De 7 nyligste mesterne</h1>
-        </div> --> 
+        <img src="../bilder/Hoofdfoto-Champions-League.jpg" draggable="false">
+        <div class="topptekst">
+        <h1>The Champions League is the competition everyone wants to be in.</h1>
+        <p class="gerrard">- Steven Gerrard</p>
+    </div>
         <div class="indexBurger">
             <i class="fa-solid fa-bars burgerMeny"></i>
         </div>
         <nav id="clMeny" class="skjult">
-            <a href="omUCL.html" class="menyLink">Om UCL</a>
-            <a href="quiz.html" class="menyLink">Quiz!</a>
+            <a href="docs/omUCL.html" class="menyLink">Om UCL</a>
+            <a href="docs/quiz.html" class="menyLink">Quiz!</a>
 
             <div class="dropdown">
                 <a href="#" id="sesongToggler">
                     Sesonger <span id="pil">▼</span>
                 </a>
                 <div class="sesongListe">
-                    <a href="Real2024.html">2024</a>
-                    <a href="ManCity2023.html">2023</a>
-                    <a href="Real2022.html">2022</a>
-                    <a href="CFC2021.html">2021</a>
-                    <a href="Bayern2020.html">2020</a>
+                    <a href="docs/Real2024.html">2024</a>
+                    <a href="docs/ManCity2023.html">2023</a>
+                    <a href="docs/Real2022.html">2022</a>
+                    <a href="docs/CFC2021.html">2021</a>
+                    <a href="docs/Bayern2020.html">2020</a>
                     <a href="docs/LFC2019.html">2019</a>
-                    <a href="Real2018.html">2018</a>
+                    <a href="docs/Real2018.html">2018</a>
                 </div>
             </div>
         </nav>
 
         <div id="image-track" data-mouse-down-at="0" data-prev-percentage="-100">
-            <img class="image" src="bilder/real18.jpg" draggable="false"
-                onclick="window.location.href='Real2018.html';" />
-            <img class="image" src="bilder/lfc19.jpg" draggable="false"
-                onclick="window.location.href='LFC2019.html';" />
-            <img class="image" src="bilder/bayern20.jpeg" draggable="false"
-                onclick="window.location.href='Bayern2020.html';" />
-            <img class="image" src="bilder/cfc21.jpg" draggable="false"
-                onclick="window.location.href='CFC2021.html';" />
-            <img class="image" src="bilder/real22.jpg" draggable="false"
-                onclick="window.location.href='Real2022.html';" />
-            <img class="image" src="bilder/manCity23.jpg" draggable="false"
-                onclick="window.location.href='ManCity2023.html';" />
-            <img class="image" src="bilder/real24.jpg" draggable="false"
-                onclick="window.location.href='Real2024.html';" />
+            <img class="image" src="../bilder/real18.jpg" draggable="false"
+                onclick="window.location.href='docs/Real2018.html';" />
+            <img class="image" src="../bilder/lfc19.jpg" draggable="false"
+                onclick="window.location.href='docs/LFC2019.html';" />
+            <img class="image" src="../bilder/bayern20.jpeg" draggable="false"
+                onclick="window.location.href='docs/Bayern2020.html';" />
+            <img class="image" src="../bilder/cfc21.jpg" draggable="false"
+                onclick="window.location.href='docs/CFC2021.html';" />
+            <img class="image" src="../bilder/real22.jpg" draggable="false"
+                onclick="window.location.href='docs/Real2022.html';" />
+            <img class="image" src="../bilder/manCity23.jpg" draggable="false"
+                onclick="window.location.href='docs/ManCity2023.html';" />
+            <img class="image" src="../bilder/real24.jpg" draggable="false"
+                onclick="window.location.href='docs/Real2024.html';" />
         </div>
     </main>
 
