gjort det mer ryddig, endret noen diver til main og section

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body class="index">
 
     <main>
         <img src="../bilder/Hoofdfoto-Champions-League.jpg" draggable="false">
         <div class="topptekst">
-        <h1>The Champions League is the competition everyone wants to be in.</h1>
-        <p class="gerrard">- Steven Gerrard</p>
-    </div>
+            <h1>The Champions League is the competition everyone wants to be in.</h1>
+            <p class="gerrard">- Steven Gerrard</p>
+        </div>
         <div class="indexBurger">
             <i class="fa-solid fa-bars burgerMeny"></i>
         </div>
@@ -30,7 +30,7 @@
                 <a href="#" id="sesongToggler">
                     Sesonger <span id="pil">▼</span>
                 </a>
-                <div class="sesongListe">
+                <section class="sesongListe">
                     <a href="docs/Real2024.html">2024</a>
                     <a href="docs/ManCity2023.html">2023</a>
                     <a href="docs/Real2022.html">2022</a>
@@ -38,7 +38,7 @@
                     <a href="docs/Bayern2020.html">2020</a>
                     <a href="docs/LFC2019.html">2019</a>
                     <a href="docs/Real2018.html">2018</a>
-                </div>
+            </div>
             </div>
         </nav>
 
