gjort index responsive

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <body class="index">
 
     <main>
-        <img src="../bilder/Hoofdfoto-Champions-League.jpg" draggable="false">
+        <div class="bakgrunnsbilde" draggable="false"></div>
+
         <div class="topptekst">
-            <h1>The Champions League is the competition everyone wants to be in.</h1>
+            <h1 id="h1">The Champions League is the competition everyone wants to be in.</h1>
             <p class="gerrard">- Steven Gerrard</p>
         </div>
         <div class="indexBurger">
