--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         </nav>
 
         <div id="image-track" data-mouse-down-at="0" data-prev-percentage="-100">
-            <img class="image" src="../bilder/real18.jpg" draggable="false"
+            <img class="image" src="bilder/real18.jpg" draggable="false"
                 onclick="window.location.href='docs/Real2018.html';" />
-            <img class="image" src="../bilder/lfc19.jpg" draggable="false"
+            <img class="image" src="bilder/lfc19.jpg" draggable="false"
                 onclick="window.location.href='docs/LFC2019.html';" />
-            <img class="image" src="../bilder/bayern20.jpeg" draggable="false"
+            <img class="image" src="bilder/bayern20.jpeg" draggable="false"
                 onclick="window.location.href='docs/Bayern2020.html';" />
-            <img class="image" src="../bilder/cfc21.jpg" draggable="false"
+            <img class="image" src="bilder/cfc21.jpg" draggable="false"
                 onclick="window.location.href='docs/CFC2021.html';" />
-            <img class="image" src="../bilder/real22.jpg" draggable="false"
+            <img class="image" src="bilder/real22.jpg" draggable="false"
                 onclick="window.location.href='docs/Real2022.html';" />
-            <img class="image" src="../bilder/manCity23.jpg" draggable="false"
+            <img class="image" src="bilder/manCity23.jpg" draggable="false"
                 onclick="window.location.href='docs/ManCity2023.html';" />
-            <img class="image" src="../bilder/real24.jpg" draggable="false"
+            <img class="image" src="bilder/real24.jpg" draggable="false"
                 onclick="window.location.href='docs/Real2024.html';" />
         </div>
     </main>
